created basic structure of website and database for questions

--- a/common/listShow/ListShow.module.scss
+++ b/common/listShow/ListShow.module.scss
@@ -12,11 +12,10 @@
       flex-direction: column;
       width: 100%;
       height: 100%;
-      gap: 8px;
-    }
-    .listShow_item::marker {
-      font-size: 16px;
-      font-weight: bolder;
+      gap: 12px;
+      .listShow_item {
+        margin-left: 24px;
+      }
     }
   }
 }
