--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -9,11 +9,13 @@
     max-width: 1100px;
     width: 100%;
     height: 100%;
+    display: flex;
+    gap: 32px;
+    flex-direction: column;
     .questionDisplay_question {
-      margin: 16px;
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      margin: 12px;
       z-index: 10;
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
       padding: 16px;
