--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -7,12 +7,19 @@
     max-width: 1100px;
     display: flex;
     gap: 32px;
+    height: calc(100vh - 70px);
+    max-height: calc(100vh - 70px);
+    padding-top: 32px;
     .database_sideBar {
       width: 250px;
     }
     .database_container {
       flex: 1;
       width: 100%;
+      overflow-y: scroll;
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
   }
 }
