--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -20,6 +20,7 @@
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
       padding: 16px;
       border-radius: 4px;
+      gap: 16px;
       .questionDisplay_question_title {
         font-size: 1.5rem;
         font-weight: 600;
