--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -7,6 +7,7 @@
     max-width: 1100px;
     display: flex;
     gap: 32px;
+    width: 100%;
     height: calc(100vh - 70px);
     max-height: calc(100vh - 70px);
     padding-top: 32px;
@@ -21,5 +22,13 @@
         display: none;
       }
     }
+  }
+  .database_coming_soon_container {
+    height: calc(100vh - 70px);
+    max-height: calc(100vh - 70px);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
