--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -17,7 +17,8 @@
       flex-direction: column;
       margin: 12px;
       z-index: 10;
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+      background-color: #fff;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
       padding: 16px;
       border-radius: 4px;
       gap: 16px;
