--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -21,6 +21,7 @@
       &::-webkit-scrollbar {
         display: none;
       }
+      scroll-behavior: smooth;
     }
   }
   .database_coming_soon_container {
