created medium reactjs questions list

--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -5,6 +5,7 @@
   .codeSnippet_container {
     max-width: 1100px;
     height: 100%;
+    width: 100%;
     .codeSnippet_title {
       height: 42px;
       width: 100%;
