reactjs medium level questions added

--- a/common/dropDown/DropDown.module.scss
+++ b/common/dropDown/DropDown.module.scss
@@ -33,7 +33,7 @@
       cursor: pointer;
       padding: 16px;
       &:hover {
-        background-color: #ece7e7;
+        background-color: #e1e1e1;
       }
     }
   }
