--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Roboto";
+  font-display: swap;
+  src: url("../assets/fonts/CedarvilleCursive-Regular.ttf");
+}
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
