--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -23,9 +23,10 @@
       border-radius: 8px;
       gap: 16px;
       .questionDisplay_question_title {
-        font-size: 1.5rem;
+        font-size: 24px;
         font-weight: 600;
         color: #000;
+        font-family: 'Roboto';
       }
       .questionDisplay_question_answer {
         font-size: 1.2rem;
