--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -4,7 +4,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 24px;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   z-index: 100;
   background: #202123;
