--- a/components/dashboard/Dashboard.module.scss
+++ b/components/dashboard/Dashboard.module.scss
@@ -1,8 +1,7 @@
 .dashboard {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  .dashboard_container {
-    max-width: 1100px;
-  }
+  width: 100%;
 }
