--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -6,21 +6,6 @@
     max-width: 1100px;
     height: 100%;
     width: 100%;
-    .codeSnippet_title {
-      height: 42px;
-      width: 100%;
-      background: #343541;
-      color: white;
-      display: flex;
-      align-items: center;
-      font-size: 14px;
-      padding: 0px 20px;
-      font-weight: 600;
-      justify-content: flex-end;
-      cursor: pointer;
-      border-radius: 12px 12px 0 0;
-    }
+    border-radius: 4px;
   }
 }
-
-
