--- a/common/dropDown/DropDown.module.scss
+++ b/common/dropDown/DropDown.module.scss
@@ -3,29 +3,26 @@
   .dropDown_header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    height: 42px;
-    border-bottom: 1px solid black;
+    height: 36px;
+    gap: 12px;
     cursor: pointer;
-    padding: 0px 16px;
     .dropDown_header_title {
       font-size: 20px;
-      font-weight: 500;
+      font-weight: 600;
       color: #000000;
     }
     .dropDown_icon {
       font-size: 24px !important;
+      transform: rotate(-90deg);
     }
     .dropDown_icon_reverse {
-      transform: rotate(180deg);
+      transform: rotate(0deg);
       transition: all 0.5s ease-in-out;
     }
   }
   .dropDown_list {
     display: flex;
     flex-direction: column;
-    max-height: 400px;
-    overflow-y: scroll;
     .dropDown_list_item {
       font-size: 16px;
       font-weight: 400;
@@ -36,12 +33,5 @@
         background-color: #e1e1e1;
       }
     }
-  }
-  .open_dropwDown_Style {
-    background: #fff;
-    border-radius: 4px;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-    transition: all 0.5s ease-in-out;
   }
 }
