--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -15,18 +15,13 @@
     .questionDisplay_question {
       display: flex;
       flex-direction: column;
-      margin: 12px;
-      z-index: 10;
-      background-color: #fff;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
       padding: 16px;
-      border-radius: 8px;
       gap: 16px;
       .questionDisplay_question_title {
         font-size: 24px;
         font-weight: 600;
         color: #000;
-        font-family: 'Roboto';
+        font-family: "Roboto";
       }
       .questionDisplay_question_answer {
         font-size: 1.2rem;
