--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -1,23 +1,20 @@
 .database {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: calc(100vh - 70px);
+  width: 100%;
   .database_main_container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 100%;
-    margin-top: 72px;
-    position: relative;
-    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
     .database_sideBar {
-      width: 250px;
-      position: fixed;
-      top: 86px;
-      left: 32px;
+      width: 300px;
+      position: sticky;
+      top: 70px;
+      height: calc(100vh - 70px);
     }
     .database_container {
-      width: 750px;
+      max-width: calc(1024px - 300px);
+      width: 100%;
     }
   }
   .database_coming_soon_container {
@@ -28,10 +25,4 @@
     align-items: center;
     justify-content: center;
   }
-}
-
-.database_up_btn {
-  position: fixed;
-  bottom: 56px;
-  right: 56px;
 }
