--- a/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
+++ b/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
@@ -1,50 +1,29 @@
 .featuredQuestions {
-  height: 90vh;
   width: 100%;
   max-width: 1100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 32px;
   .featuredQuestions_box {
-    width: 900px;
-    height: 600px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    border-radius: 8px;
-    justify-content: center;
-    padding: 24px;
-    box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-      0 12px 24px rgb(0 0 0 / 5%);
-    transition: all 0.2s ease-in-out;
-    &:hover {
-      box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-        0 12px 24px rgb(0 0 0 / 10%);
-      background-color: #f5f5f5;
+    justify-content: space-between;
+    gap: 32px;
+    .featuredQuestions_left_box {
+      display: flex;
     }
-    .featuredQuestions_box_title {
-      font-size: 28px;
-      font-weight: 600;
-      margin-bottom: 24px;
-      font-family: "Roboto", sans-serif;
-    }
-    .featuredQuestions_box_questions {
+    .featuredQuestions_right_box {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      justify-content: space-between;
+      gap: 32px;
     }
-    .featuredQuestions_box_questions_question {
-      color: #0070f3;
-      font-size: 16px;
-      font-weight: 600;
-      font-family: "Roboto", sans-serif;
-      cursor: pointer;
-      transition: all 0.2s ease-in-out;
-      &:hover {
-        color: #0061d5;
-        text-decoration: underline;
-      }
-    }
+  }
+  .featuredQuestions_bottom {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
   }
 }
