--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -6,12 +6,20 @@
   width: 100%;
   height: 100%;
   .questionDisplay_container {
-    max-width: 1100px;
     width: 100%;
     height: 100%;
     display: flex;
     gap: 32px;
     flex-direction: column;
+    .questionDisplay_container_title {
+      font-size: 18px;
+      font-weight: 500;
+      color: #666;
+      background: #fafafa;
+      border: 1px solid#eaeaea;
+      padding: 16px;
+      border-radius: 4px;
+    }
     .questionDisplay_question {
       display: flex;
       flex-direction: column;
