--- a/components/dashboard/feature/Feature.module.scss
+++ b/components/dashboard/feature/Feature.module.scss
@@ -5,11 +5,19 @@
     margin: 0 auto;
     .feature_container_text {
       text-align: center;
-      margin-bottom: 50px;
+      margin-bottom: 12px;
       font-size: 28px;
       font-weight: 600;
       color: #000;
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
+    }
+    .feature_container_description {
+      text-align: center;
+      font-size: 16px;
+      font-weight: 400;
+      margin-bottom: 32px;
+      color: #666;
+      font-family: "Roboto", sans-serif;
     }
   }
 }
