--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -2,6 +2,7 @@
   .sideBar_container {
     width: 300px;
     padding: 16px;
+    padding-top: 0px;
     .sideBar_searchBar {
       width: 100%;
       height: 42px;
