created all most all design for blog application

--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -38,3 +38,9 @@
     }
   }
 }
+
+.questionDisplay_question_selected {
+  background: #fafafa;
+  border: 1px solid #eaeaea;
+  border-radius: 4px;
+}
