--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -25,8 +25,8 @@
           color: #ccc;
         }
       }
-      .search_icon{
-       margin-right: 4px;
+      .search_icon {
+        margin-right: 4px;
       }
     }
     .sideBar_scroolable_container {
@@ -37,6 +37,13 @@
         font-weight: 500;
         font-family: "Roboto", sans-serif;
         margin-bottom: 8px;
+      }
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 4px;
       }
     }
   }
