--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,12 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  display: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
