added top questions

--- a/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
+++ b/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   gap: 32px;
+  background: #ffffff;
   .featuredQuestions_box {
     display: flex;
     align-items: center;
