--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   gap: 42px;
+  background: #ffffff;
   .topSection_title {
     font-size: 60px;
     font-weight: 800;
