--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -5,12 +5,14 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  background: #ffffff;
   .questionDisplay_container {
     width: 100%;
     height: 100%;
     display: flex;
     gap: 32px;
     flex-direction: column;
+    background: #ffffff;
     .questionDisplay_container_title {
       font-size: 18px;
       font-weight: 500;
