--- a/components/dashboard/startLearning/StartLearning.module.scss
+++ b/components/dashboard/startLearning/StartLearning.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   margin: 120px 0px;
+  background: #ffffff;
   margin-top: 20px;
   .startLearning__container {
     max-width: 1024px;
