--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #ffffff;
   .footer_title {
     font-size: 14px;
     font-weight: 600;
