--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -3,6 +3,7 @@
     width: 300px;
     padding: 16px;
     padding-top: 0px;
+    background: #ffffff;
     .sideBar_searchBar {
       width: 100%;
       height: 42px;
