--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -1,20 +1,24 @@
 .database {
   height: calc(100vh - 96px);
   width: 100%;
+  background: #ffffff;
   .database_main_container {
     width: 100%;
     display: flex;
     justify-content: center;
     margin-top: 96px;
+    background: #ffffff;
     .database_sideBar {
       width: 300px;
       position: sticky;
       top: 96px;
       height: calc(100vh - 96px);
+      background: #ffffff;
     }
     .database_container {
       max-width: calc(1024px - 300px);
       width: 100%;
+      background: #ffffff;
     }
   }
   .database_coming_soon_container {
