added new questions

--- a/common/makeDifferentiate/MakeDifferentiate.module.scss
+++ b/common/makeDifferentiate/MakeDifferentiate.module.scss
@@ -2,8 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
   .differentiate_container {
-    max-width: 1100px;
+    margin: 16px 0px;
     height: 100%;
     table {
       width: 100%;
