--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -11,6 +11,7 @@
     .database_sideBar {
       width: 300px;
       position: sticky;
+      margin-right: 16px;
       top: 96px;
       height: calc(100vh - 96px);
       background: #ffffff;
