--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   .codeSnippet_container {
-    max-width: 1100px;
+    margin: 16px 0px;
     height: 100%;
     width: 100%;
     border-radius: 4px;
