--- a/common/dropDown/DropDown.module.scss
+++ b/common/dropDown/DropDown.module.scss
@@ -7,9 +7,10 @@
     gap: 12px;
     cursor: pointer;
     .dropDown_header_title {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 600;
       color: #000000;
+      font-family: "Inter", sans-serif;
     }
     .dropDown_icon {
       font-size: 24px !important;
@@ -24,9 +25,10 @@
     display: flex;
     flex-direction: column;
     .dropDown_list_item {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 400;
-      color: #000000;
+      color: #666;
+      font-family: 'Inter', sans-serif;
       cursor: pointer;
       padding: 16px;
       &:hover {
