--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@
   font-family: "Menlo";
   src: url("../assets/fonts/Menlo-Regular.ttf");
 }
+@font-face {
+  font-family: "Inter";
+  font-family: 400;
+  src: url("../assets/fonts/Inter-Regular.ttf");
+}
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -123,7 +128,7 @@ a {
   margin-left: 32px;
 }
 .simple_answers {
-  margin-left: 32px;
+  margin-left: 0px;
 }
 
 code {
