--- a/styles/globals.css
+++ b/styles/globals.css
@@ -146,3 +146,22 @@ pre {
 nav {
   display: none;
 }
+
+.go_back_class {
+  position: fixed;
+  top: 100px;
+  right: 32px;
+  z-index: 100;
+  width: 150px;
+  height: 36px;
+  border-radius: 4px;
+  background-color: #1009ead7;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
