--- a/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
+++ b/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
@@ -23,6 +23,21 @@
       text-align: center;
       padding: 0px 120px;
     }
+    .machineCodingList__container__header__btn {
+      width: 350px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(214, 53, 53, 0.937);
+      border-radius: 4px;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 600;
+      font-family: "Roboto", sans-serif;
+      cursor: pointer;
+      transition: all 0.8s ease-in-out;
+    }
   }
   .machineCodingList__container__list {
     display: flex;
