removng extra data

--- a/common/makeDifferentiate/MakeDifferentiate.module.scss
+++ b/common/makeDifferentiate/MakeDifferentiate.module.scss
@@ -16,6 +16,7 @@
         text-align: left;
         border-right: 1px solid #000;
         border-bottom: 1px solid #000;
+        color: #000;
       }
       .differentiate_header {
         font-weight: 800px;
