--- a/common/modal/style.module.scss
+++ b/common/modal/style.module.scss
@@ -21,6 +21,7 @@
     .modal_box_title {
       font-size: 42px;
       font-weight: 800;
+      color: #000;
       font-family: "Roboto", sans-serif;
     }
     .modal_box_description {
