--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -8,9 +8,11 @@
   justify-content: center;
   gap: 42px;
   background: #ffffff;
+  margin-top: 32px;
   .topSection_title {
     font-size: 60px;
     font-weight: 800;
+    color: #000;
     text-align: center;
     font-family: "Roboto", sans-serif;
   }
