--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -22,6 +22,7 @@
         outline: none;
         font-size: 16px;
         color: #333;
+        background: #ffffff;
         &::placeholder {
           color: #ccc;
         }
@@ -38,6 +39,7 @@
         font-weight: 500;
         font-family: "Roboto", sans-serif;
         margin-bottom: 8px;
+        color: #000;
       }
       &::-webkit-scrollbar {
         width: 8px;
