removng extra data

--- a/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
+++ b/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
@@ -26,6 +26,7 @@
     .machineCodingList__container__header__btn {
       width: 350px;
       height: 50px;
+      margin: 32px 0px;
       display: flex;
       align-items: center;
       justify-content: center;
