--- a/common/frontEndCodingQuestions/FrontEndCodingQuestions.module.scss
+++ b/common/frontEndCodingQuestions/FrontEndCodingQuestions.module.scss
@@ -1,12 +1,12 @@
 .frontEndCodingQuestions {
-  max-width: 1000px;
+  max-width: 1024px;
   margin: 120px auto;
-  padding: 32px;
   background-color: #fff;
   .frontEndCodingQuestions__container {
     display: flex;
     flex-direction: column;
     gap: 52px;
+    padding: 32px;
     .frontEndCodingQuestions__container__questions {
       display: flex;
       flex-direction: column;
@@ -27,4 +27,50 @@
       }
     }
   }
+}
+.machineCodingList__container__list__item {
+  width: 480px;
+  height: auto;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
+    0 12px 24px rgb(0 0 0 / 5%);
+  transition: all 0.8s ease-in-out;
+  &:hover {
+    box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
+      0 12px 24px rgb(0 0 0 / 10%);
+    background-color: #f5f5f5;
+  }
+  padding: 16px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  justify-content: space-between;
+  .machineCodingList__container__list__item__question {
+    font-size: 16px;
+    font-weight: 400;
+    color: #000000;
+    font-family: "Inter", sans-serif;
+    margin-bottom: 8px;
+  }
+}
+.machineCodingList__container__list__item__language {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.machineCodingList__container__list__item__img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.frontEndCodingQuestions__container_machine_coding_round {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 32px;
 }
