--- a/components/codingQuestions/CodingQuestions.module.scss
+++ b/components/codingQuestions/CodingQuestions.module.scss
@@ -8,9 +8,7 @@
     margin: 120px auto;
     padding: 32px;
     background-color: #fff;
-    // border-radius: 8px;
-    // box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-    //   0 12px 24px rgb(0 0 0 / 5%);
+    width: 1000px;
     display: flex;
     flex-direction: column;
     gap: 16px;
