question added javascript

--- a/common/frontEndCodingQuestions/FrontEndCodingQuestions.module.scss
+++ b/common/frontEndCodingQuestions/FrontEndCodingQuestions.module.scss
@@ -74,3 +74,11 @@
   flex-wrap: wrap;
   gap: 32px;
 }
+
+@media screen and (max-width: 768px) {
+  .frontEndCodingQuestions {
+    .frontEndCodingQuestions__container {
+      padding: 0px;
+    }
+  }
+}
