--- a/components/dashboard/famousQuestions/FamousQuestions.module.scss
+++ b/components/dashboard/famousQuestions/FamousQuestions.module.scss
@@ -15,3 +15,16 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .codingQuestions {
+    width: 100%;
+    padding: 0px 16px;
+    .codingQuestions__container {
+      width: 100%;
+      .codingQuestions__container__header {
+        padding: 0px 0px;
+      }
+    }
+  }
+}
