--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -41,3 +41,17 @@
     font-family: "Inter", sans-serif;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 0px 16px;
+    .footer_container {
+      height: 650px;
+      .footer_row {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+      }
+    }
+  }
+}
