--- a/components/codingQuestions/CodingQuestions.module.scss
+++ b/components/codingQuestions/CodingQuestions.module.scss
@@ -28,3 +28,13 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .codingQuestions {
+    padding: 0px 16px;
+    .codingQuestions__container {
+      padding: 0px;
+      width: 100%;
+    }
+  }
+}
