--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -44,3 +44,22 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .topSection {
+    height: calc(100vh - 70px);
+    padding: 0px 16px;
+    gap: 36px;
+    margin-top: 0px;
+    .topSection_title {
+      font-size: 42px;
+      text-align: center;
+    }
+    .topSection_description {
+      font-size: 16px;
+    }
+    .topSection_button {
+      margin-top: 32px;
+    }
+  }
+}
