--- a/common/modal/style.module.scss
+++ b/common/modal/style.module.scss
@@ -28,17 +28,19 @@
       font-size: 22px;
       font-weight: 400;
       color: #666;
+      font-family: "Inter", sans-serif;
       text-align: center;
     }
     .modal_box_button {
       margin-top: 24px;
       padding: 16px 42px;
-      border-radius: 8px;
+      border-radius: 4px;
       font-size: 16px;
       font-weight: 600;
       background: #202123;
       color: #fff;
       cursor: pointer;
+      font-family: "Roboto", sans-serif;
       transition: all 0.2s ease-in-out;
       &:hover {
         background: #1a1a1d;
@@ -54,5 +56,9 @@
     .modal_box {
       width: 100% !important;
     }
+  }
+  .modal_box_description {
+    font-size: 18px !important;
+    text-align: center;
   }
 }
