--- a/components/dashboard/Dashboard.module.scss
+++ b/components/dashboard/Dashboard.module.scss
@@ -1,8 +1,24 @@
 .dashboard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  width: var(--max-width);
+  margin: 0 auto;
   background: #ffffff;
+  overflow-y: scroll;
+  min-height: 100vh;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(157, 153, 153);
+    border-radius: 4px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .dashboard {
+    width: 100%;
+    &::-webkit-scrollbar {
+      width: 0px;
+      display: none;
+    }
+  }
 }
