--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,18 @@
 @font-face {
   font-family: "Roboto";
   src: url("../assets/fonts/Roboto-Black.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Menlo";
   src: url("../assets/fonts/Menlo-Regular.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Inter";
   font-family: 400;
   src: url("../assets/fonts/Inter-Regular.ttf");
-}
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  font-display: swap;
 }
 
 *,
@@ -31,16 +27,15 @@ li {
   margin: 0;
 }
 
+:root {
+  --max-width: 1032px;
+}
+
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
   background: #ffffff;
-}
-body::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  display: none;
 }
 
 a {
