--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,3 +108,13 @@ strong {
   font-size: 18px;
   font-weight: 600;
 }
+
+.simple_answers_link_btn {
+  padding: 8px 24px;
+  border-radius: 4px;
+  background-color: #1009ead7;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+}
