added loader and change font style

--- a/components/header/mobile/HeaderMobile.module.scss
+++ b/components/header/mobile/HeaderMobile.module.scss
@@ -25,6 +25,7 @@
       font-weight: 800;
       color: #fff;
       cursor: pointer;
+      font-family: "Inter", sans-serif;
     }
   }
   .header_menu_mobile {
@@ -43,7 +44,7 @@
       font-weight: 500;
       color: rgb(15, 14, 14);
       cursor: pointer;
-      font-family: "Roboto", sans-serif;
+      font-family: "Inter", sans-serif;
       &:hover {
         color: #e2dddd;
       }
