--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -21,6 +21,7 @@
     font-size: 32px;
     font-weight: 800;
     color: #fff;
+    font-family: "Inter", sans-serif;
     cursor: pointer;
   }
   .header_menu {
@@ -32,7 +33,7 @@
       color: #fff;
       margin-left: 24px;
       cursor: pointer;
-      font-family: "Roboto", sans-serif;
+      font-family: "Inter", sans-serif;
       &:hover {
         color: #e2dddd;
       }
