adding blog url

--- a/common/topicsList/TopicsList.module.scss
+++ b/common/topicsList/TopicsList.module.scss
@@ -1,15 +1,9 @@
 .topicsList {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  margin: 8px 0px;
   .topicsList_container {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    padding: 16px;
-    gap: 32px;
+    flex-direction: column;
+    margin: 32px 0px;
     overflow-x: scroll;
     overflow-y: hidden;
     -ms-overflow-style: none;
@@ -19,10 +13,38 @@
       display: none;
       width: 0px;
     }
+    .topicsList_heder_container {
+      padding: 12px 0px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 24px;
+      .topicsList_header {
+        font-size: 32px;
+        font-weight: 700;
+        color: #000;
+        font-family: "Inter", sans-serif;
+      }
+      .topicsList_sub_header {
+        font-size: 16px;
+        font-weight: 400;
+        color: #000;
+        font-family: "Inter", sans-serif;
+      }
+    }
+    .topicsList_items_list {
+      margin-top: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 16px;
+    }
     .topicsList_item {
-      background: #f3f3ff;
       color: #000;
-      padding: 11px 19px;
+      font-size: 14px;
+      padding: 8px 16px;
+      font-weight: 500;
       border-radius: 100px;
       cursor: pointer;
       font-family: "Inter", sans-serif;
@@ -32,15 +54,5 @@
       color: #fff;
       background-color: #5373f2;
     }
-  }
-  .topicsList_icon {
-    cursor: pointer;
-    padding: 10px 4px;
-    border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-      rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-  }
-  .topicsList_icon_backward {
-    transform: rotate(180deg);
   }
 }
