--- a/components/blogDashboard/noPostFound/NoPostFound.module.scss
+++ b/components/blogDashboard/noPostFound/NoPostFound.module.scss
@@ -3,12 +3,12 @@
   margin: 0px auto;
   padding: 32px;
   .no_post_container {
-    height: calc(100vh - 200px);
+    height: calc(80vh);
     display: flex;
+    margin-top: 32px;
     justify-content: center;
-    align-items: center;
     font-family: "Roboto", sans-serif;
-    font-size: 42px;
+    font-size: 36px;
     color: rgb(45, 45, 45);
     font-weight: 500;
     text-align: center;
