--- a/components/readBlog/ReadBlog.module.scss
+++ b/components/readBlog/ReadBlog.module.scss
@@ -13,6 +13,7 @@
         font-size: 32px;
         font-weight: 700;
         font-family: "Roboto", sans-serif;
+        color: #000;
       }
       .readBlog_container_title_date {
         font-size: 14px;
@@ -35,6 +36,7 @@
       font-weight: 400;
       font-family: "Inter", sans-serif;
       line-height: 1.5;
+      color: #000;
     }
   }
 }
