--- a/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
+++ b/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
@@ -1,6 +1,4 @@
 .machineCodingList__container {
-  max-width: 1024px;
-  margin: 0 auto;
   margin: 200px 0px;
   .machineCodingList__container__header {
     display: flex;
@@ -33,11 +31,14 @@
       background-color: rgba(214, 53, 53, 0.937);
       border-radius: 4px;
       color: #fff;
-      font-size: 16px;
+      font-size: 15px;
       font-weight: 600;
-      font-family: "Roboto", sans-serif;
+      font-family: "Inter", sans-serif;
       cursor: pointer;
       transition: all 0.8s ease-in-out;
+      &:hover {
+        background-color: rgba(214, 53, 53, 0.8);
+      }
     }
   }
   .machineCodingList__container__list {
