--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -1,11 +1,11 @@
 .topSection {
-  height: calc(100vh - 70px);
+  height: calc(100vh - 100px);
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 42px;
+  gap: 44px;
   .topSection_title {
     font-size: 60px;
     font-weight: 800;
@@ -19,25 +19,46 @@
     text-align: center;
     font-family: "Roboto", sans-serif;
     color: #666;
+    padding: 0px 72px;
   }
-  .topSection_button {
+  .topSection_btn_list {
     display: flex;
-    justify-content: center;
-    margin-top: 52px;
-    width: 300px;
-    height: 50px;
-    border-radius: 5px;
-    background-color: #0070f3;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 600;
-    font-family: "Roboto", sans-serif;
     align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    &:hover {
-      background-color: #0061d5;
+    gap: 32px;
+    margin-top: 46px;
+    .topSection_btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 300px;
+      height: 50px;
+      border-radius: 4px;
+      font-size: 16px;
+      font-weight: 500;
+      font-family: "Inter", sans-serif;
+      cursor: pointer;
+      transition: all 0.4s ease-in-out;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+        rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    }
+    .topSection_button_left {
+      background-color: #000;
+      color: #fff;
+      border: 1px solid #eaeaea;
+      &:hover {
+        background-color: rgb(245, 245, 245);
+        border: 1px solid #000;
+        color: #000;
+      }
+    }
+    .topSection_button_right {
+      background-color: #fff;
+      color: #000;
+      border: 1px solid #eaeaea;
+      &:hover {
+        background-color: rgb(245, 245, 245);
+        border: 1px solid #000;
+      }
     }
   }
 }
@@ -54,6 +75,7 @@
     }
     .topSection_description {
       font-size: 16px;
+      padding: 0px;
     }
     .topSection_button {
       margin-top: 32px;
