--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -1,41 +1,101 @@
 .header {
   display: flex;
-  height: 70px;
+  height: 80px;
   align-items: center;
   justify-content: space-between;
-  padding: 0 24px;
   position: sticky;
   position: -webkit-sticky; /* Safari */
   width: 100%;
   top: 0;
-  z-index: 100;
-  background: #202123;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  z-index: 3000;
+  border-bottom: 1px solid #eaeaea;
+  transform: translateZ(0);
+  backdrop-filter: saturate(180%) blur(5px);
+  background: hsla(0, 0%, 100%, 0.8);
   .header_container {
     width: 100%;
+    width: var(--max-width);
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  .header_title {
-    font-size: 32px;
-    font-weight: 800;
-    color: #fff;
     font-family: "Inter", sans-serif;
-    cursor: pointer;
-  }
-  .header_menu {
-    display: flex;
-    align-items: center;
-    .header_menu_item {
-      font-size: 18px;
+    // left side
+    .header_container_left {
+      display: flex;
+      align-items: center;
+      gap: 42px;
+      .header_title {
+        font-size: 30px;
+        font-weight: 800;
+        cursor: pointer;
+      }
+      .header_menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 22px;
+        margin-top: 8px;
+        .header_menu_item {
+          transition: color 0.2s ease;
+          font-size: 15px;
+          font-weight: 600;
+          line-height: 1.5;
+          color: #696969;
+          cursor: pointer;
+          &:hover {
+            color: #000;
+          }
+        }
+        .header_menu_item_active {
+          color: #0070f3;
+          text-shadow: 0 0 1px #0070f3;
+        }
+      }
+    }
+
+    // right side
+    .header_container_right {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-top: 8px;
+      font-size: 14px;
       font-weight: 500;
-      color: #fff;
-      margin-left: 24px;
-      cursor: pointer;
       font-family: "Inter", sans-serif;
-      &:hover {
-        color: #e2dddd;
+      .header_container_right_item_feedback {
+        color: #696969;
+        cursor: pointer;
+        border: 1px solid #eaeaea;
+        background-color: #fff;
+        padding: 8px 16px;
+        border-radius: 4px;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          color: #000;
+          border: 1px solid #000;
+        }
+      }
+      .header_container_right_item_blog {
+        background: #000;
+        color: #fff;
+        padding: 8px 16px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          background: #fff;
+          color: #000;
+          border: 1px solid #eaeaea;
+        }
+      }
+      .header_container_right_item_coffee {
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          transform: scale(1.1);
+        }
       }
     }
   }
