--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -1,34 +1,23 @@
 .database {
-  height: calc(100vh - 70px);
   width: 100%;
   background: #ffffff;
-  overflow-y: scroll;
-  &::-webkit-scrollbar {
-    width: 8px;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: rgb(157, 153, 153);
-    border-radius: 4px;
-  }
+  width: var(--max-width);
+  margin: 48px auto;
   .database_main_container {
-    width: var(--max-width);
-    margin: 0px auto;
     display: flex;
     justify-content: center;
-    background: #ffffff;
     .database_sideBar {
       width: 300px;
       position: sticky;
       margin-right: 16px;
-      top: 24px;
-      height: calc(100vh - 94px);
+      top: 128px;
+      height: calc(100vh - 128px);
       background: #ffffff;
     }
     .database_container {
-      max-width: calc(1024px - 300px);
+      max-width: calc(var(--max-width) - 300px);
       width: 100%;
       background: #ffffff;
-      margin: 24px 0px;
     }
   }
   .database_coming_soon_container {
@@ -44,10 +33,6 @@
 @media screen and (max-width: 768px) {
   .database {
     padding: 16px;
-    &::-webkit-scrollbar {
-      width: 0px;
-      display: none;
-    }
     .database_main_container {
       width: 100%;
       .database_sideBar {
