--- a/common/topicsList/TopicsList.module.scss
+++ b/common/topicsList/TopicsList.module.scss
@@ -28,7 +28,7 @@
 }
 
 .topicsList_items_list {
-  height: 49px;
+  height: 59px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,10 +37,8 @@
   position: -webkit-sticky; /* Safari */
   z-index: 3000;
   top: 80px;
+  border-bottom: 1px solid #eaeaea;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 16px;
   overflow-x: scroll;
   overflow-y: hidden;
