added all style in pages

--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -14,8 +14,9 @@
     flex-direction: column;
     background: #ffffff;
     .questionDisplay_container_title {
-      font-size: 16px;
-      font-weight: 500;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 1.65;
       color: #666;
       background: #fafafa;
       border: 1px solid#eaeaea;
@@ -26,16 +27,16 @@
     .questionDisplay_question {
       display: flex;
       flex-direction: column;
-      gap: 6px;
+      gap: 12px;
       .questionDisplay_question_title {
-        font-size: 24px;
+        font-size: 22px;
         font-weight: 600;
         color: #000;
         font-family: "Roboto";
       }
       .questionDisplay_question_answer {
         line-height: 1.65;
-        font-size: 16px;
+        font-size: 15px;
         font-weight: 400;
         direction: ltr;
         font-feature-settings: "kern";
