--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,11 +73,12 @@ code {
   font-size: 14px;
   text-shadow: 0 1px rgb(0 0 0 / 30%);
   line-height: 20px;
+  text-size-adjust: 100%;
 }
 
 pre {
   border-radius: 3px;
-  padding: 1.5rem !important;
+  padding: 1.2rem !important;
   background: #1d1f21 !important;
 }
 
@@ -108,8 +109,10 @@ nav {
 }
 
 strong {
-  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
   font-weight: 600;
+  color: #000;
 }
 
 .simple_answers_link_btn {
@@ -129,9 +132,9 @@ strong {
 
 b {
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 600;
-  color: rgb(228, 59, 59);
+  color: rgb(241, 89, 89);
 }
 
 .main-container {
