--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -35,9 +35,9 @@
       height: calc(100vh - 160px);
       overflow-y: scroll;
       .sideBar_title {
-        font-size: 24px;
-        font-weight: 500;
-        font-family: "Roboto", sans-serif;
+        font-size: 21px;
+        font-weight: 600;
+        font-family: "Roboto";
         margin-bottom: 8px;
         color: #000;
       }
@@ -45,7 +45,7 @@
         width: 8px;
       }
       &::-webkit-scrollbar-thumb {
-        background-color: #ccc;
+        background-color: rgb(186, 184, 184);
         border-radius: 4px;
       }
     }
