--- a/components/blogDashboard/noPostFound/NoPostFound.module.scss
+++ b/components/blogDashboard/noPostFound/NoPostFound.module.scss
@@ -9,8 +9,9 @@
     justify-content: center;
     font-family: "Roboto", sans-serif;
     font-size: 36px;
-    color: rgb(45, 45, 45);
+    color: rgb(100, 99, 99);
     font-weight: 500;
     text-align: center;
+    font-style: italic;
   }
 }
