--- a/components/machineCodingRoundQuestion/FrontEndCodingQuestions.module.scss
+++ b/components/machineCodingRoundQuestion/FrontEndCodingQuestions.module.scss
@@ -6,6 +6,13 @@
     display: flex;
     flex-wrap: wrap;
     gap: 42px;
+    .machine_round_list_loader {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 50vh;
+    }
     .machine_round_list_item {
       width: 490px;
       height: auto;
