--- a/components/topCodingQuestions/TopCodingQuestion.module.scss
+++ b/components/topCodingQuestions/TopCodingQuestion.module.scss
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
   gap: 52px;
+  .frontEndCodingQuestions__container__loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50vh;
+  }
   .frontEndCodingQuestions__container__questions {
     display: flex;
     flex-direction: column;
