added mobile design for dashboard

--- a/components/dashboard/famousQuestions/FamousQuestions.module.scss
+++ b/components/dashboard/famousQuestions/FamousQuestions.module.scss
@@ -29,6 +29,7 @@
       width: 100%;
       .codingQuestions__container__header {
         padding: 0px 0px;
+        font-size: 28px;
       }
     }
   }
