--- a/common/makeDifferentiate/MakeDifferentiate.module.scss
+++ b/common/makeDifferentiate/MakeDifferentiate.module.scss
@@ -39,3 +39,14 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .differentiate {
+    .differentiate_container {
+      table {
+        min-width: 100%;
+        width: 100%;
+      }
+    }
+  }
+}
