--- a/common/modal/style.module.scss
+++ b/common/modal/style.module.scss
@@ -55,10 +55,16 @@
     width: 100%;
     .modal_box {
       width: 100% !important;
+      .modal_box_title {
+        font-size: 28px;
+      }
+      .modal_box_description {
+        font-size: 18px;
+      }
+      .modal_box_button {
+        touch-action: pan-y;
+        -webkit-tap-highlight-color: transparent;
+      }
     }
-  }
-  .modal_box_description {
-    font-size: 18px !important;
-    text-align: center;
   }
 }
