--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -63,22 +63,24 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .topSection {
-    height: calc(100vh - 120px);
     padding: 0px 16px;
-    gap: 36px;
-    margin-top: 0px;
     .topSection_title {
-      font-size: 36px;
+      font-size: 32px;
       text-align: center;
     }
     .topSection_description {
       font-size: 16px;
+      font-family: "Inter", sans-serif;
       padding: 0px;
     }
-    .topSection_button {
-      margin-top: 32px;
+    .topSection_btn_list {
+      flex-direction: column;
+      .topSection_btn {
+        touch-action: pan-y;
+        -webkit-tap-highlight-color: transparent;
+      }
     }
   }
 }
