--- a/components/blogDashboard/BlogDashboard.module.scss
+++ b/components/blogDashboard/BlogDashboard.module.scss
@@ -6,3 +6,12 @@
     margin: 0px auto;
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .dashboard {
+    .dashboard_container {
+      width: 100%;
+      padding: 0px 0px;
+    }
+  }
+}
